# hft_framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  config.example.ini
.github/workflows/: build.yml
bench/: README.md  bench_runner.cpp  bench_runner.h  bench_scenarios.cpp  main.cpp
docs/: API_REFERENCE.md  BENCHMARK.md  CONFIGURATION.md  DESIGN.md  LOW_LATENCY_GUIDE.md  OPTIMIZATION_SUGGESTIONS.md  OVERVIEW.md  PROJECT_READING_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  STRATEGY.md  TROUBLESHOOTING.md
scripts/: build_pgo.bat  nic_hft_tuning.ps1  revert_tuning.ps1  verify_tuning.ps1  windows_hft_tuning.ps1
src/: main.cpp
src/api/: hft_api.cpp  hft_api.h  json_builder.h
src/app/: app_runtime.cpp  app_runtime.h
src/common/: afxdp_receiver.h  async_logger.h  async_writer.cpp  async_writer.h  binary_io.h  branch_hints.h  config.cpp  config.h  config_store.cpp  config_store.h  config_validator.cpp  config_validator.h  crc32.h  crypto.cpp  crypto.h  dpdk_receiver.h  encoding.h  event.h  huge_page.h  latency.h  logger.h  network_receiver.h  qpc_timer.h  shm_queue.h  spsc_queue.h  stdio_file_writer.h  string_utils.h  thread_utils.h  types.h  udp_receiver.cpp  udp_receiver.h  uring_file_writer.cpp  uring_file_writer.h  wal_reader.h  wal_writer.h  watchdog_shm.h
src/engine/: account_config.cpp  account_config.h  account_context.h  account_manager.cpp  account_manager.h  backtest_engine.cpp  backtest_engine.h  backtest_report.cpp  backtest_report.h  i_trading_context.h  instrument_registry.cpp  instrument_registry.h  kline_manager.cpp  kline_manager.h  mmap_tick_writer.cpp  mmap_tick_writer.h  paper_trading.cpp  paper_trading.h  session_manager.cpp  session_manager.h  strategy_controller.cpp  strategy_controller.h  tick_data_manager.cpp  tick_data_manager.h  tick_reader.cpp  tick_reader.h  tick_recorder.cpp  tick_recorder.h  trading_engine.cpp  trading_engine.h
src/gateway/: ctp_md_gateway.cpp  ctp_md_gateway.h  ctp_trade_gateway.cpp  ctp_trade_gateway.h  dual_md_gateway.cpp  dual_md_gateway.h  dual_trade_gateway.cpp  dual_trade_gateway.h  fix_md_gateway.cpp  fix_md_gateway.h  fix_trade_gateway.cpp  fix_trade_gateway.h  i_md_gateway.h  i_trade_gateway.h  qdp_md_gateway.cpp  qdp_md_gateway.h  qdp_trade_gateway.cpp  qdp_trade_gateway.h  replay_md_gateway.cpp  replay_md_gateway.h  shm_md_gateway.cpp  shm_md_gateway.h  udp_md_gateway.cpp  udp_md_gateway.h  udp_md_publisher.h
src/market/: feature_pipeline.h  option_pricing.cpp  option_pricing.h  order_book.h  order_book_manager.h
src/metrics/: metrics_server.cpp  metrics_server.h
src/order/: algo_order_manager.cpp  algo_order_manager.h  close_manager.cpp  close_manager.h  conditional_order_manager.cpp  conditional_order_manager.h  order_manager.cpp  order_manager.h
src/position/: position_manager.cpp  position_manager.h
src/risk/: risk_manager.cpp  risk_manager.h
src/strategy/: py_strategy.cpp  py_strategy.h  simple_strategy.cpp  simple_strategy.h  strategy_base.cpp  strategy_base.h  strategy_config.cpp  strategy_config.h
src/watchdog/: watchdog_main.cpp
src/webui/: embedded_html.h  web_server.cpp  web_server.h
strategies/: README.md  example_strategy.py  hft_sdk.py  instant_trigger_strategy.py  latency_test_strategy.py  ma_cross_strategy.py
tests/: simnow_regression.py  test_backtest.cpp  test_conditional_order.cpp  test_config_validation.cpp  test_dual_gateway.cpp  test_engine_extreme_modes.cpp  test_feature_pipeline.cpp  test_fix_gateway.cpp  test_integration.cpp  test_main.cpp  test_network_receiver.cpp  test_option_pricing.cpp  test_order_manager.cpp  test_position_manager.cpp  test_qdp_gateway.cpp  test_risk_cancel_rate_exempt.cpp  test_risk_manager.cpp  test_rms.cpp  test_spsc_queue.cpp  test_strategy_lifecycle.cpp  test_stress.cpp  test_udp_gateway.cpp  test_wal.cpp  test_watchdog.cpp
tests/fakes/: fake_md_gateway.h  fake_trade_gateway.h
